--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton.timber:timber:2.7.1'
     compile 'com.facebook.rebound:rebound:0.3.7'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support:support-v13:21.+'
-    compile 'com.android.support:support-v4:21.+'
-    compile 'com.android.support:palette-v7:+'
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:support-v13:22.0.0'
+    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:palette-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
 }
